--- a/HW_5/style.css
+++ b/HW_5/style.css
@@ -155,6 +155,7 @@ img {
     padding-left: 12px;
   }
   .user-card__id {
+    width: 35px;
     font-size: 1.25rem;
   }
   .user-card__personaldata {
@@ -164,7 +165,7 @@ img {
     gap: 8px;
   }
   .user-card__firstlastname {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
   .user-card__image {
     width: 75px;
