--- a/API_1_HW/style.css
+++ b/API_1_HW/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: #1E1E1E;
     font-family: 'Orbitron', sans-serif;
