--- a/API_1_HW/style.css
+++ b/API_1_HW/style.css
@@ -245,7 +245,7 @@ body {
 
 .about {
     padding: 0px 120px;
-    background-color: #180d06;
+    background-color: #000000;
 }
 
 .about__title {
@@ -357,6 +357,116 @@ body {
 #pagination-4,
 #pagination-5 {
     display: none;
+}
+
+.random-sport-image {
+    padding: 50px;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+.random-sport-image__title {
+    color: rgba(255, 255, 255, 0.90);
+    font-family: Outfit;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 170.9%;
+    letter-spacing: 0.96px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.random-sport-image__image-box {
+    position: relative;
+    display: flex;
+    width: 600px;
+    height: 900px;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.box {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    background: rgba(135, 135, 135, 0.3);
+    padding: 10px;
+}
+
+.author {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.author-photo {
+    border-radius: 50%;
+    width: 32px;
+    display: block;
+
+}
+
+.make-like {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.like-icon {
+    width: 32px;
+    cursor: pointer;
+}
+
+.buttons-box {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.previous-button,
+.next-button {
+    width: 150px;
+    height: 40px;
+    background-color: #FF4601;
+    color: #FFF;
+    font-family: Outfit;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration: none;
+    border: none;
+    border-top-left-radius: 49px;
+    border-bottom-right-radius: 49px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.previous-button:hover,
+.next-button:hover {
+    background-color: #FFF;
+    color: #FF4601;
+}
+
+.non-active {
+    pointer-events: none;
+    opacity: 50%;
 }
 
 @media (max-width: 1439px) {
@@ -473,10 +583,34 @@ body {
     .slider-item_1_name {
         text-align: left;
     }
+
+    .author_name {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 425px) {
+    .random-sport-image__image-box {
+        height: 472px;
+        width: 380px;
+    }
+
+    .author_name {
+        font-size: 16px;
+    }
+
+    .buttons-box {
+
+        gap: 20px;
+    }
 }
 
 @media (max-width: 320px) {
     .slider {
         padding-left: 5px;
+    }
+
+    .author_name {
+        font-size: 9px;
     }
 }
